# TreeWrapper

./: BuildFile.xml  CMakeLists.txt  LICENCE  Makefile.am  README.md  autogen.sh  configure.in  search.json
cmake/modules/: FindROOT.cmake
interface/: Brancher.h  Leaf.h  Resetter.h  TreeGroup.h  TreeWrapper.h  VarrGroup.h
src/: Brancher.cc  Leaf.cc  TreeGroup.cc  TreeWrapper.cc  TreeWrapperAccessor.cc
xml/: BranchCreaterT.xml  BranchReaderT.xml  Brancher.xml  ROOT.Leaf.xml  ROOT.TreeGroup.xml  ROOT.TreeWrapper.xml  ROOT.TreeWrapperAccessor.xml  ROOT.utils.xml  ROOT.xml  Resetter.xml  ResetterT.xml  TChain.xml  TTree.xml  index.xml  report.xml
