dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([TreeWrapper], [0.1], [sebastien.brochet@cern.ch])

AM_INIT_AUTOMAKE([1.9 foreign subdir-objects])

AC_CONFIG_MACRO_DIR([m4])

AC_LANG([C++])

AC_PROG_CXX
my_save_cflags="$CPPFLAGS"
CPPFLAGS=-std=c++0x
AC_MSG_CHECKING([whether CXX supports -std=c++0x])
AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
    [AC_MSG_RESULT([yes])]
    [AM_CPPFLAGS=-std=c++0x],
    [AC_MSG_RESULT([no])]
)
CPPFLAGS="$my_save_cflags"
AC_SUBST([AM_CPPFLAGS])

LT_INIT

ROOT_PATH(5.34, , AC_MSG_ERROR(ROOT not found))

BOOST_REQUIRE

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
